tester/src/test/aya/failure/syntax/issue293-emoji64.aya.txt
In file $FILE:10:28 ->

   8 |   | ğŸ€
   9 | 
  10 | def u : â¤ï¸å®ˆâ¤ï¸æŠ¤â¤ï¸æœ€â¤ï¸å¥½â¤ï¸çš„â¤ï¸ => ğŸ€
                                   ^^
  
Error: The expected type `â¤ï¸å®ˆâ¤ï¸æŠ¤â¤ï¸æœ€â¤ï¸å¥½â¤ï¸çš„â¤ï¸` does not match the actual type `â¤ï¸`
Tycking interrupted due to errors.
What are you doing?
